Fix table header vertical alignment   Fix reu-use alignment CSS   Remove star icon from table add doc strings  in sorttable.js   Remove unnecessary HTML / CSS for foundry status as per this comment

--- a/css/custom.css
+++ b/css/custom.css
@@ -23,3 +23,7 @@
   padding: 5px;
   height: 10px;
 }
+
+.ob-center{
+  vertical-align: middle !important;
+}
